add custom gtm tags

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <!-- PRIVY CMP TAG -->
   <script type="text/javascript"
-    src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/0a78b95d-6c6f-4afb-a9de-e177e4686e8d"></script>
-
+    src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/8d2a6fa6-fbdf-4512-a933-620571ae3986"></script>
+  <!-- End PRIVY CMP TAG -->
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
