--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/ea48bcb2-ae7e-436c-9024-151704c64804"></script>
-
+  <script type="text/javascript"
+    src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/aea4d707-b5c6-48a3-b738-bd71c23dffc2"></script>
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
- 
+
 
 </head>
 
