--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/e8bd991f-dc81-40dc-91c9-a6c1f2be4c3f"></script> 
+  <script type="text/javascript"
+    src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/e8bd991f-dc81-40dc-91c9-a6c1f2be4c3f"></script>
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
