remove privy banner

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
-  <script type="text/javascript"
-    src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/e8bd991f-dc81-40dc-91c9-a6c1f2be4c3f"></script>
+  <!-- <script type="text/javascript"
+    src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/e8bd991f-dc81-40dc-91c9-a6c1f2be4c3f"></script> -->
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
