--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/deedff1d-a3b5-45d7-88e4-6439f351723e"></script>
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/cf94776f-23a4-4dcb-a538-22ba711f2b04"></script>
 
 
 
@@ -31,7 +31,6 @@
 
 
 
-  
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
