--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/7b589428-1e7b-4df8-aac5-c4513cd89c90"></script>
-
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/6a6c58d9a14c/eb750a0c-7135-46d1-ae52-92e28fad1b49"></script>
 
 
 
